<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/orderID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="Order ID"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/orderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="86dp"
            android:layout_marginLeft="86dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="15dp"
            android:ems="10" />

        <Button
            android:id="@+id/buttonStartOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="14dp"
            android:text="Start Order" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>