...
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="100dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        app:layout_behavior="#string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewStaffTitle"
        app:layout_constraintTop_toBottomOf="@+id/menuBarInsert"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewStaffTitle"
        android:layout_width="wrap_content"
...
