...
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/OrdersButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/button"
        android:text="@string/orders"
...
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeliveriesButton" />

    <Button
        android:id="@+id/inventoryButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/inventory"
...
