...
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewInventoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center|center_horizontal"
        android:text="@string/inventory"
        android:textColor="@color/colorAccent"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuBarInsert" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewInventory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="50dp"
        android:paddingRight="10dp"
...
